01/09/18: Started on the 'Eight Queens' assignment
01/10/18: Initial program only found one solution from random placement of the first queen,
  started on new algorithm
01/10/18: Finished 'Eight Queens' assignment, prints 92 solutions 