@@ -1,7 +1,11 @@
-all: queen clean
-	
 queen: main.c
-	gcc -o main main.c
+	gcc -o queen main.c
 	
-clean: main
-	rm -f main
+clean: queen
+	rm -f queen
+	rm -f 92_solutions.txt
+
+print: main.c
+	gcc -o queen main.c
+	./queen > 92_solutions.txt
+	rm queen
